--- a/index.html
+++ b/index.html
@@ -34,35 +34,33 @@
           <a href="#contact" class="page-scroll">Contact</a>
           <a href="#subscribe" class="page-scroll">Subscribe</a>
         </div>
-        <div class="collapse navbar-collapse menu-wrapper" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0 nav nav-navbar" data-aos="fade-down" data-aos-duration="2000" data-aos-delay="2000">
-            <li class="nav-item mx-2 mt-4 pt-2 px-2 item-nav active">
-              <a class="nav-link link-nav active page-scroll" aria-current="page" href="#home">Home</a>
-            </li>
-            <li class="nav-item mx-2 mt-4 pt-2 px-2 item-nav fw-normal">
-              <a class="nav-link link-nav page-scroll" href="#about">About</a>
-            </li>
-            <li class="nav-item mx-2 mt-4 pt-2 px-2 item-nav">
-              <a class="nav-link link-nav page-scroll" href="#projects">Projects</a>
-            </li>
-            <li class="nav-item mx-2 mt-4 pt-2 px-2 item-nav position-relative">
-              <a class="nav-link link-nav">Service</a>
-              <div class="dropdown-item">
-                <ul class="navbar-nav p-3 d-block">
-                  <li class="nav-item w-100 item-nav text-center">
-                    <a class="nav-link link-nav ps-1" href="website-builder.html">Website Builder</a>
-                  </li>
-                  <li class="nav-item w-100 item-nav text-center">
-                    <a class="nav-link link-nav ps-1" href="platform-builder.html">Platform Builder</a>
-                  </li>
-                </ul>
-              </div>
-            </li>
-            <li class="nav-item mx-2 mt-4 pt-2 px-2 item-nav">
-              <a class="nav-link link-nav page-scroll" href="#contact">Contact</a>
-            </li>
-          </ul>
-        </div>
+        <ul class="nav-navbar me-auto mb-2 mb-lg-0 nav " data-aos="fade-down" data-aos-duration="2000" data-aos-delay="2000">
+          <li class="nav-item mx-2 mt-4 pt-2 px-2 item-nav active">
+            <a class="nav-link link-nav active page-scroll" aria-current="page" href="#home">Home</a>
+          </li>
+          <li class="nav-item mx-2 mt-4 pt-2 px-2 item-nav fw-normal">
+            <a class="nav-link link-nav page-scroll" href="#about">About</a>
+          </li>
+          <li class="nav-item mx-2 mt-4 pt-2 px-2 item-nav">
+            <a class="nav-link link-nav page-scroll" href="#projects">Projects</a>
+          </li>
+          <li class="nav-item mx-2 mt-4 pt-2 px-2 item-nav position-relative">
+            <a class="nav-link link-nav">Service</a>
+            <div class="dropdown-item">
+              <ul class="navbar-nav p-3 d-block">
+                <li class="nav-item w-100 item-nav text-center">
+                  <a class="nav-link link-nav ps-1" href="website-builder.html">Website Builder</a>
+                </li>
+                <li class="nav-item w-100 item-nav text-center">
+                  <a class="nav-link link-nav ps-1" href="platform-builder.html">Platform Builder</a>
+                </li>
+              </ul>
+            </div>
+          </li>
+          <li class="nav-item mx-2 mt-4 pt-2 px-2 item-nav">
+            <a class="nav-link link-nav page-scroll" href="#contact">Contact</a>
+          </li>
+        </ul>
         <div class="login opacity-0">
           <div class="icon-user rounded-circle d-flex me-2">
             <i class="fa fa-user m-auto text-white" aria-hidden="true"></i>
@@ -198,7 +196,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6 mb-3" data-aos="fade-right" data-aos-duration="1500">
-          <h2 class="fw-bold text-black">Subscribe Our Newsletter</h2>
+          <h2 class="fw-bold  text-black">Subscribe Our Newsletter</h2>
           <p class="txt-primary mb-0">
             Subscribe to get our promotional news
           </p>
@@ -226,7 +224,7 @@
         </p>
       </div>
       <div class="row gy-4">
-        <div class="col-md-6">
+        <div class="col-md-6 h-100">
           <div class="row g-4">
             <div class="col-md-6 col-6">
               <div class="history-card shadow text-center" data-aos="fade-right" data-aos-duration="2000">
@@ -255,7 +253,7 @@
           </div>
         </div>
         <div class="col-md-6">
-          <video src="./assets/img/Gedung Pencakar Langit - 91744.mp4" controls class="w-100 video-history" data-aos="fade-left" data-aos-duration="2000"></video>
+            <video src="./assets/img/Gedung Pencakar Langit - 91744.mp4" controls class="w-100 h-100 video-history" data-aos="fade-left" data-aos-duration="2000"></video>
         </div>
       </div>
     </div>
@@ -273,10 +271,10 @@
           clients
         </p>
       </div>
-      <div class="row gy-5 gx-3">
+      <div class="row gy-5 gx-3 mb-3">
         <div class="col-md-4 col-6">
           <div class="position-relative">
-            <div class="projects-item position-absolute d-flex flex-column justify-content-center align-items-center bg-white">
+            <div class="projects-item hidden position-absolute d-flex flex-column justify-content-center align-items-center bg-white">
               <p class="m-0 txt-primary">LOOP, Find the Fun</p>
               <p>Web Apps</p>
             </div>
@@ -287,7 +285,7 @@
         </div>
         <div class="col-md-4 col-6">
           <div class="position-relative">
-            <div class="projects-item position-absolute d-flex flex-column justify-content-center align-items-center bg-white">
+            <div class="projects-item hidden position-absolute d-flex flex-column justify-content-center align-items-center bg-white">
               <p class="m-0 txt-primary text-uppercase">Virtual Spirit</p>
               <p>Agency Web Apps</p>
             </div>
@@ -298,7 +296,7 @@
         </div>
         <div class="col-md-4 col-6">
           <div class="position-relative">
-            <div class="projects-item position-absolute d-flex flex-column justify-content-center align-items-center bg-white">
+            <div class="projects-item hidden position-absolute d-flex flex-column justify-content-center align-items-center bg-white">
               <p class="m-0 txt-primary text-uppercase">Virtual Spirit</p>
               <p>Agency Web Apps</p>
             </div>
@@ -309,7 +307,7 @@
         </div>
         <div class="col-md-4 col-6">
           <div class="position-relative">
-            <div class="projects-item position-absolute d-flex flex-column justify-content-center align-items-center bg-white">
+            <div class="projects-item hidden position-absolute d-flex flex-column justify-content-center align-items-center bg-white">
               <p class="m-0 txt-primary text-uppercase">Fabrication net</p>
               <p>Web Apps</p>
             </div>
@@ -320,7 +318,7 @@
         </div>
         <div class="col-md-4 col-6">
           <div class="position-relative">
-            <div class="projects-item position-absolute d-flex flex-column justify-content-center align-items-center bg-white">
+            <div class="projects-item hidden position-absolute d-flex flex-column justify-content-center align-items-center bg-white">
               <p class="m-0 txt-primary text-uppercase">Best By Peer</p>
               <p>Web Apps</p>
             </div>
@@ -331,7 +329,7 @@
         </div>
         <div class="col-md-4 col-6">
           <div class="position-relative">
-            <div class="projects-item position-absolute d-flex flex-column justify-content-center align-items-center bg-white">
+            <div class="projects-item hidden position-absolute d-flex flex-column justify-content-center align-items-center bg-white">
               <p class="m-0 txt-primary text-uppercase">belilah</p>
               <p>E-Commerce Web Apps</p>
             </div>
@@ -342,7 +340,7 @@
         </div>
         <div class="col-md-4 col-6">
           <div class="position-relative">
-            <div class="projects-item position-absolute d-flex flex-column justify-content-center align-items-center bg-white">
+            <div class="projects-item hidden position-absolute d-flex flex-column justify-content-center align-items-center bg-white">
               <p class="m-0 txt-primary text-uppercase">Nineod Freight</p>
               <p>Profile Company</p>
             </div>
@@ -353,7 +351,7 @@
         </div>
         <div class="col-md-4 col-6">
           <div class="position-relative">
-            <div class="projects-item position-absolute d-flex flex-column justify-content-center align-items-center bg-white">
+            <div class="projects-item hidden position-absolute d-flex flex-column justify-content-center align-items-center bg-white">
               <p class="m-0 txt-primary text-uppercase">
                 sinar indah plastic
               </p>
@@ -366,7 +364,7 @@
         </div>
         <div class="col-md-4 col-6">
           <div class="position-relative">
-            <div class="projects-item position-absolute d-flex flex-column justify-content-center align-items-center bg-white">
+            <div class="projects-item hidden position-absolute d-flex flex-column justify-content-center align-items-center bg-white">
               <p class="m-0 txt-primary text-uppercase">kopi hulir</p>
               <p>Profile Company</p>
             </div>
@@ -376,6 +374,7 @@
           </div>
         </div>
       </div>
+      <a href="" id="showMore">Show More</a>
     </div>
   </section>
   <section class="our-clients py-5 mb-5 overflow-hidden" id="our-clients">
