--- a/services.html
+++ b/services.html
@@ -179,11 +179,9 @@
     </section>
     <section class="section-services-fifth py-4 bg-white">
         <div class="container">
-
             <div class="section-services-fifth-title text-center mb-4">
                 <h1 class="text-black overflow-hidden" data-aos="fade-up" data-aos-duration="2000">Pilih Paket Sesuai Kebutuhan Anda</h1>
             </div>
-
             <div class="section-services-fifth-body d-flex flex-column justify-content-center align-items-center text-center">
                 <h4 class="fw-bold text-black" data-aos="fade-up" data-aos-duration="2000">Website Personal</h4>
                 <p class="w-50" data-aos="fade-up" data-aos-duration="2000" data-aos-delay="100">Dapatkan Best Price potongan sebesar Rp.2.000.000 dengan berlangganan selama 2 tahun.</p>
@@ -244,6 +242,7 @@
     </footer>
     <script src="./assets/js/jquery.js"></script>
     <script src="./assets/js/aos/aos.js"></script>
+    <script src="./assets/js/jquery/jquery.lazyload.min.js"></script>
     <script src="./assets/js/bootstrap/bootstrap.min.js"></script>
     <script src="./assets/js/aos/customAos.js"></script>
     <script src="./assets/js/custom.js"></script>
