--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <a href="#contact" class="page-scroll">Contact</a>
           <a href="#subscribe" class="page-scroll">Subscribe</a>
         </div>
-        <ul class="nav-navbar me-auto mb-2 mb-lg-0 nav " data-aos="fade-down" data-aos-duration="2000" data-aos-delay="2000">
+        <ul class="nav-navbar me-auto mb-2 mb-lg-0 nav" data-aos="fade-down" data-aos-duration="2000" data-aos-delay="2000">
           <li class="nav-item mx-2 mt-4 pt-2 px-2 item-nav active">
             <a class="nav-link link-nav active page-scroll" aria-current="page" href="#home">Home</a>
           </li>
@@ -225,8 +225,8 @@
       </div>
       <div class="row gy-4">
         <div class="col-md-6 h-100">
-          <div class="row g-4">
-            <div class="col-md-6 col-6">
+          <div class="row g-4 row-cols-2">
+            <div class="col">
               <div class="history-card shadow text-center" data-aos="fade-right" data-aos-duration="2000">
                 <h1 class="fw-bold text-black">235</h1>
                 <p class="txt-primary m-0">Project Complete</p>
@@ -253,7 +253,7 @@
           </div>
         </div>
         <div class="col-md-6">
-            <video src="./assets/img/Gedung Pencakar Langit - 91744.mp4" controls class="w-100 h-100 video-history" data-aos="fade-left" data-aos-duration="2000"></video>
+          <video src="./assets/img/Gedung Pencakar Langit - 91744.mp4" controls class="w-100 h-100 video-history" data-aos="fade-left" data-aos-duration="2000"></video>
         </div>
       </div>
     </div>
@@ -271,10 +271,10 @@
           clients
         </p>
       </div>
-      <div class="row gy-5 gx-3 mb-3">
-        <div class="col-md-4 col-6">
-          <div class="position-relative">
-            <div class="projects-item hidden position-absolute d-flex flex-column justify-content-center align-items-center bg-white">
+      <div class="row gy-5 gx-3 mb-4">
+        <div class="col-md-4 col-6 project-wrap">
+          <div class="position-relative ">
+            <div class="projects-item position-absolute d-flex flex-column justify-content-center align-items-center bg-white">
               <p class="m-0 txt-primary">LOOP, Find the Fun</p>
               <p>Web Apps</p>
             </div>
@@ -283,9 +283,9 @@
             </div>
           </div>
         </div>
-        <div class="col-md-4 col-6">
-          <div class="position-relative">
-            <div class="projects-item hidden position-absolute d-flex flex-column justify-content-center align-items-center bg-white">
+        <div class="col-md-4 col-6 project-wrap">
+          <div class="position-relative ">
+            <div class="projects-item position-absolute d-flex flex-column justify-content-center align-items-center bg-white">
               <p class="m-0 txt-primary text-uppercase">Virtual Spirit</p>
               <p>Agency Web Apps</p>
             </div>
@@ -294,9 +294,9 @@
             </div>
           </div>
         </div>
-        <div class="col-md-4 col-6">
-          <div class="position-relative">
-            <div class="projects-item hidden position-absolute d-flex flex-column justify-content-center align-items-center bg-white">
+        <div class="col-md-4 col-6 project-wrap">
+          <div class="position-relative ">
+            <div class="projects-item position-absolute d-flex flex-column justify-content-center align-items-center bg-white">
               <p class="m-0 txt-primary text-uppercase">Virtual Spirit</p>
               <p>Agency Web Apps</p>
             </div>
@@ -305,9 +305,9 @@
             </div>
           </div>
         </div>
-        <div class="col-md-4 col-6">
-          <div class="position-relative">
-            <div class="projects-item hidden position-absolute d-flex flex-column justify-content-center align-items-center bg-white">
+        <div class="col-md-4 col-6 project-wrap">
+          <div class="position-relative ">
+            <div class="projects-item position-absolute d-flex flex-column justify-content-center align-items-center bg-white">
               <p class="m-0 txt-primary text-uppercase">Fabrication net</p>
               <p>Web Apps</p>
             </div>
@@ -316,9 +316,9 @@
             </div>
           </div>
         </div>
-        <div class="col-md-4 col-6">
-          <div class="position-relative">
-            <div class="projects-item hidden position-absolute d-flex flex-column justify-content-center align-items-center bg-white">
+        <div class="col-md-4 col-6 project-wrap">
+          <div class="position-relative ">
+            <div class="projects-item position-absolute d-flex flex-column justify-content-center align-items-center bg-white">
               <p class="m-0 txt-primary text-uppercase">Best By Peer</p>
               <p>Web Apps</p>
             </div>
@@ -327,9 +327,9 @@
             </div>
           </div>
         </div>
-        <div class="col-md-4 col-6">
-          <div class="position-relative">
-            <div class="projects-item hidden position-absolute d-flex flex-column justify-content-center align-items-center bg-white">
+        <div class="col-md-4 col-6 project-wrap">
+          <div class="position-relative ">
+            <div class="projects-item position-absolute d-flex flex-column justify-content-center align-items-center bg-white">
               <p class="m-0 txt-primary text-uppercase">belilah</p>
               <p>E-Commerce Web Apps</p>
             </div>
@@ -338,9 +338,9 @@
             </div>
           </div>
         </div>
-        <div class="col-md-4 col-6">
-          <div class="position-relative">
-            <div class="projects-item hidden position-absolute d-flex flex-column justify-content-center align-items-center bg-white">
+        <div class="col-md-4 col-6 project-wrap">
+          <div class="position-relative ">
+            <div class="projects-item position-absolute d-flex flex-column justify-content-center align-items-center bg-white">
               <p class="m-0 txt-primary text-uppercase">Nineod Freight</p>
               <p>Profile Company</p>
             </div>
@@ -349,9 +349,9 @@
             </div>
           </div>
         </div>
-        <div class="col-md-4 col-6">
-          <div class="position-relative">
-            <div class="projects-item hidden position-absolute d-flex flex-column justify-content-center align-items-center bg-white">
+        <div class="col-md-4 col-6 project-wrap">
+          <div class="position-relative ">
+            <div class="projects-item position-absolute d-flex flex-column justify-content-center align-items-center bg-white">
               <p class="m-0 txt-primary text-uppercase">
                 sinar indah plastic
               </p>
@@ -362,9 +362,9 @@
             </div>
           </div>
         </div>
-        <div class="col-md-4 col-6">
-          <div class="position-relative">
-            <div class="projects-item hidden position-absolute d-flex flex-column justify-content-center align-items-center bg-white">
+        <div class="col-md-4 col-6 project-wrap">
+          <div class="position-relative ">
+            <div class="projects-item position-absolute d-flex flex-column justify-content-center align-items-center bg-white">
               <p class="m-0 txt-primary text-uppercase">kopi hulir</p>
               <p>Profile Company</p>
             </div>
@@ -374,7 +374,9 @@
           </div>
         </div>
       </div>
-      <a href="" id="showMore">Show More</a>
+      <div class="w-100 text-center">
+        <a href="#" class="text-decoration-underline showMore" id="showMore">Show More</a>
+      </div>
     </div>
   </section>
   <section class="our-clients py-5 mb-5 overflow-hidden" id="our-clients">
@@ -536,6 +538,8 @@
     </div>
   </footer>
   <script src="./assets/js/jquery/jquery.js"></script>
+  <script src="./assets/js/jquery/jquery.breakpoints.min.js"></script>
+  <script src="./assets/js/jquery/jquery.lazy.min.js"></script>
   <script src="./assets/js/slick/slick.js"></script>
   <script src="./assets/js/bootstrap/bootstrap.min.js"></script>
   <script src="./assets/js/aos/aos.js"></script>
