add button prev and next in partners section and refactor in custome.js

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
   <a href="https://api.whatsapp.com/send?phone=+628112108020&text=Hello,%20i%20want%20to%20ask%20about%20website" class="wa-image-wrapper shadow d-flex justify-content-center align-items-center">
     <img src="./assets/img/iconfinder_social-whatsapp-circle_4017334.svg" alt="whatsapp-image" class="wa-image rounded-circle" />
   </a>
-  <ul class="pagination-section">
+  <ul class="pagination-section p-0">
     <li class="page-item"><a href="#home" class="rounded-circle active"></a></li>
     <li class="page-item"><a href="#about" class="rounded-circle"></a></li>
     <li class="page-item"><a href="#projects" class="rounded-circle"></a></li>
@@ -422,6 +422,8 @@
     </div>
   </section>
   <section class="partners" id="partners">
+    <i class="fas fa-chevron-left arrow-prev text-white"></i>
+    <i class="fas fa-chevron-right arrow-next text-white"></i>
     <div class="partners-body">
       <img src="./assets/img/github.png" alt="github-logo" class="img-fluid img-partners me-3" />
       <img src="./assets/img/heroku.png" alt="heroku-logo" class="img-fluid img-partners me-3" />
