migration font family from online to offline

--- a/index.html
+++ b/index.html
@@ -112,22 +112,22 @@
           <div class="about-text ps-3">
             <h1 class="fw-bold text-black" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="500">
               What We Have to
-              <span class="txt-secondary">Help</span> Bussines Owner
+              <span class="txt-secondary">Help</span> Bussiness Owner
             </h1>
             <p class="txt-primary mb-4" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="600">
               We mainly focus to help Business owner and support them using
               Our Digital Solution. And our client can focus with their
               idea, sales and leads.
             </p>
-            <div class="d-flex align-items-center mb-4" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="700">
+            <div class="d-flex align-items-center checklist-item mb-4" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="700">
               <i class="fas fa-check-circle txt-secondary-solid fs-3 me-3"></i>
               <span class="fs-5 txt-primary">Trustworthy Partner</span>
             </div>
-            <div class="d-flex align-items-center mb-4" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="800">
+            <div class="d-flex align-items-center checklist-item mb-4" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="800">
               <i class="fas fa-check-circle txt-secondary-solid fs-3 me-3"></i>
               <span class="fs-5 txt-primary">Quality Service</span>
             </div>
-            <div class="d-flex align-items-center mb-4" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="900">
+            <div class="d-flex align-items-center checklist-item mb-4" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="900">
               <i class="fas fa-check-circle txt-secondary-solid fs-3 me-3"></i>
               <span class="fs-5 txt-primary">Competitive Price</span>
             </div>
@@ -202,10 +202,12 @@
           </p>
         </div>
         <div class="col-md-6">
-          <div class="input-group mb-3" data-aos="fade-left" data-aos-duration="1500">
+          <div class="input-group mb-1" data-aos="fade-left" data-aos-duration="1500">
             <input type="text" class="form-control input-subscribe" placeholder="Enter your email here*" aria-label="Recipient's username" aria-describedby="basic-addon2" />
+            <div></div>
             <span class="input-group-text button-subscribe" id="basic-addon2">Join</span>
           </div>
+          <p>Thanks for subscribe!</p>
         </div>
       </div>
     </div>
@@ -504,7 +506,7 @@
             <textarea name="" id="" cols="30" rows="7" class="input-control-contact w-100" placeholder="Type your message here..."></textarea>
           </div>
           <div class="col-md-12">
-            <button class="w-100 text-uppercase fw-semibold border-0 btn-submit-contact">
+            <button class="w-100 text-uppercase fw-bold border-0 btn-submit-contact">
               submit
             </button>
           </div>
