--- a/index.html
+++ b/index.html
@@ -495,15 +495,15 @@
         <form action="#" class="form row" data-aos="fade-in" data-aos-duration="3000" data-aos-delay="500">
           <div class="col-md-12">
             <div class="input-group-contact d-flex justify-content-between">
-              <input type="text" class="input-control-contact" placeholder="Name" />
-              <input type="text" class="input-control-contact" placeholder="Email" />
+              <input type="text" class="input-control-contact txt-primary" placeholder="Name" />
+              <input type="text" class="input-control-contact txt-primary" placeholder="Email" />
             </div>
           </div>
           <div class="col-md-12">
-            <input type="text" class="input-control-contact w-100" placeholder="Subject" />
+            <input type="text" class="input-control-contact w-100 txt-primary" placeholder="Subject" />
           </div>
           <div class="col-md-12">
-            <textarea name="" id="" cols="30" rows="7" class="input-control-contact w-100" placeholder="Type your message here..."></textarea>
+            <textarea name="" id="" cols="30" rows="7" class="input-control-contact w-100 txt-primary" placeholder="Type your message here..."></textarea>
           </div>
           <div class="col-md-12">
             <button class="w-100 text-uppercase fw-bold border-0 btn-submit-contact">
