--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       </div>
     </nav>
   </header>
-  <section class="section-row hero" id="home">
+  <section class="section-row hero" id="home"  data-parallax="scroll" data-image-src="/assets/img/image-hero.jpg">
     <div class="container">
       <div class="hero-body d-flex flex-column justify-content-center text-center align-items-center text-white" data-aos="fade-up" data-aos-duration="2000" data-aos-delay="2000">
         <h1 class="text-uppercase fw-bold mb-4">
@@ -101,11 +101,11 @@
     <li class="page-item"><a href="#projects" class="rounded-circle"></a></li>
     <li class="page-item"><a href="#contact" class="rounded-circle"></a></li>
   </ul>
-  <section class="section-row about mb-5 d-flex flex-column overflow-hidden" id="about">
+  <section class="section-row about py-5 d-flex flex-column overflow-hidden" id="about">
     <div class="container d-flex flex-column">
       <div class="about-body row mb-5">
         <div class="about-image-wrap col-md-6">
-          <div class="about-image">
+          <div class="about-image" data-parallax="scroll" data-image-src="/assets/img/about-image.jpg">
           </div>
         </div>
         <div class="about-text-wrap  col-md-6 d-flex align-items-center">
@@ -131,10 +131,10 @@
               <i class="fas fa-check-circle txt-secondary-solid fs-3 me-3"></i>
               <span class="fs-5 txt-primary">Competitive Price</span>
             </div>
-            <div class="about-text-button d-flex justify-content-start" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="1000">
-              <button class="btn-start-now text-uppercase text-dark bg-transparent fw-bold border-3 border-dark rounded-0">
+            <div class="d-flex justify-content-start" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="1000">
+              <a href="https://api.whatsapp.com/send?phone=+628112108020&text=Hello,%20i%20want%20to%20ask%20about%20website" target="_blank" class="btn-start-now text-uppercase fw-bold rounded-0">
                 start now
-              </button>
+              </a>
             </div>
           </div>
         </div>
@@ -158,9 +158,9 @@
               We're provide a service to build a custom web app to match with
               our client needs or business process. Specially made for you.
             </p>
-            <button class="btn-learn-more text-uppercase text-dark bg-transparent fw-bold border-3 border-dark rounded-0">
+            <a href="" class="btn-learn-more text-uppercase fw-bold ">
               learn more
-            </button>
+            </a>
           </div>
         </div>
         <div class="col-md-4 mb-3">
@@ -171,9 +171,9 @@
               Build your own websites. Whether you’re promoting your business,
               showcasing your work, opening your store or starting a blog
             </p>
-            <button class="btn-learn-more text-uppercase text-dark bg-transparent fw-bold border-3 border-dark rounded-0">
+            <a href="website-builder.html" class="btn-learn-more text-uppercase fw-bold">
               learn more
-            </button>
+            </a>
           </div>
         </div>
         <div class="col-md-4 mb-3">
@@ -184,9 +184,9 @@
               Platform Builder is the complete solution for entrepreneurs,
               influencers or retailers to starting an online business.
             </p>
-            <button class="btn-learn-more text-uppercase text-dark bg-transparent fw-bold border-3 border-dark rounded-0">
+            <a href="platform-builder.html" class="btn-learn-more text-uppercase fw-bold">
               learn more
-            </button>
+            </a>
           </div>
         </div>
       </div>
@@ -547,6 +547,7 @@
   <script src="./assets/js/slick/slick.js"></script>
   <script src="./assets/js/bootstrap/bootstrap.min.js"></script>
   <script src="./assets/js/aos/aos.js"></script>
+  <script src="./assets/js/parallax.js/parallax.js"></script>
   <script src="./assets/js/aos/customAos.js"></script>
   <script src="./assets/js/custom.js"></script>
 </body>
